--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,43 +1,203 @@
-@import url('https://fonts.googleapis.com/css?family=Cormorant');
-@import url('https://fonts.googleapis.com/css?family=Oswald');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-html{
-    font: var(--font-size-initial, 12px)/1.5 "Open Sans", san-serif;
-    
+body {
+  text-align: center;
+  background: #F7F7F7;
 }
 
-@media screen and (min-width:600px){
-    html { font-size: var(--font-size-lv2, 14px);}
-}
-@media screen and (min-width:700px){
-    html { font-size: var(--font-size-lv3, 16px);}
-}
-@media screen and (min-width:1600px){
-    html { font-size: var(--font-size-lv4, 18px);}
+.category-name {
+  color: black;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 
-body, table, th, td, form, input, textarea,option, select{
-    font:inherit;
-}
-h1,h2,h3,h4,h5, h6{
-    line-height: 1.2;
-    padding-bottom: 0.5em;
-}
-h1{ font-size: 2.441em;}
-h2{ font-size: 1.953em;}
-h3{ font-size: 1.563em;}
-h4{ font-size: 1.25em;}
-h5{ font-size: 1em;}
-h6{ font-size: 1em; font-weight: bold;}
 
-p, ul, ol{
-    padding-bottom: 1.5em;
-}
-ul, ol{
-    padding-left: 2em;
-}
-li{
-list-style-position:inside;
+.category-container {
+  background-color: rgb(158, 244, 166);
+  border-radius: 6px;
+  margin: 10px;
 }
 
+.category-bar li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px;
+}
+
+.category-bar a {
+  text-decoration: none;
+  color: black;
+  font-size: 25px;
+  padding:5px 7px;
+  font-weight: bold;
+}
+.category-bar a:hover {
+ background-color: rgb(6, 80, 43);
+ color:white;
+}
+
+.menu-bar {
+  text-align: center;
+  background: #161616;
+  padding: 0px 50px;
+}
+.navigation {
+  overflow: hidden;
+  background-color: #161616;
+  padding: 20px 100px;
+  display:flex;
+  justify-content: space-between;
+  cursor:pointer;
+
+}
+.second-nav {
+  background-color: #161616;
+  padding: 20px 100px;
+  display:flex;
+  justify-content: center;
+  cursor:pointer;
+}
+
+.navigation a, .second-nav a {
+
+ text-align: center;
+ color: #ffffff;
+ font-size: 25px;
+ padding-bottom: 8.5px;
+ padding-left: 10px;
+ padding-right: 10px;
+ 
+ 
+}
+.second-nav a {
+text-decoration: none;
+}
+
+
+
+.menu-bar li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px;
+}
+
+.menu-bar a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 25px;
+  padding-bottom: 8.5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.second-nav a:hover, .navigation a:hover {
+  
+  background-color: dodgerblue;
+  text-decoration: none;
+  
+}
+
+
+#nav-username {
+  color: dodgerblue;
+  font-size: 25px;
+  padding-bottom: 8.5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#site-logo {
+  height: 70px;
+  width: auto;
+  margin-right:30px;
+  font-weight: bold;
+  color:blue;
+  font-style: italic;
+  letter-spacing: 5px;
+  
+}
+
+
+footer{
+  background-color: #161616;
+  color:#a3a3a3;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+  font-weight: 600;
+  padding: 5px 0;
+  font-size: 1.5rem;
+  
+}
+
+
+
+#not-found-head {
+  color: rgb(13, 106, 163);
+  font-size: 200px;
+}
+
+#not-found-details {
+  font-size: 40px;
+  color: rgb(13, 106, 163);
+}
+
+#not-found-zero {
+  color: #FE951C;
+}
+
+.selected {
+  color: blue !important;
+  
+  font-style:italic;
+}
+
+.table-image {
+  max-width: 100px;
+}
+
+.profile-info {
+  text-align: left;
+  color: rgb(6, 88, 139);
+  background-color: rgb(234, 243, 248);
+  padding: 10px;
+  border-radius: 20px;
+}
+
+.profile-info p {
+  font-size: 30px;
+}
+
+.about-page {
+  position: relative;
+}
+
+.about-content {
+  text-transform: uppercase;
+  color: rgb(13, 106, 163);
+  font-size: 30px;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card-container{
+  display:flex;
+  width:100%;
+  flex-wrap:wrap;
+}
+.card-listing{
+  width:20%;
+  margin:10px;
+  padding:2px;
+  border:1px solid grey;
+}
+
+.card-listing:hover{  
+  box-shadow: 0 1px 5rem rgba(0,0,0,0.5);
+  transform: scale(1.1);
+  border: none;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+  z-index: 1;
+}
